Fix overflow on TA's name

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,11 @@ a:hover {
   text-align: center;
 }
 
+#name {
+  white-space: nowrap;
+  overflow-y: scroll;
+}
+
 #fbicon {
   height: 25px;
   width: 25px;
